# ROS_Autonomous_Driving

./: .gitattributes  .gitignore  README.md
src/: CMakeLists.txt  car.py  ceshi.py  detect_traffic_light.py  test.py  test1.py  test2.py
src/Decision_Making/: CMakeLists.txt  package.xml
src/Decision_Making/scripts/: decision_maker.py
src/controller/: CMakeLists.txt  package.xml
src/controller/config/: controller_params.yaml
src/controller/src/: controller_node.cpp
src/perception/: CMakeLists.txt  package.xml
src/perception/launch/: run_two_scripts.launch
src/perception/scripts/: car2.py  test3.py
src/planning/: waypoints.csv
src/planning/my_robot_name_2dnav/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.launch  package.xml
src/planning/odometry_publisher/: CMakeLists.txt  package.xml
src/planning/odometry_publisher/src/: odometry_publisher.cpp
src/planning/simple_navigation_goals/: CMakeLists.txt  package.xml
src/planning/simple_navigation_goals/src/: goals.csv  goals03.csv  position_updated.cpp  simple_navigation_goals.cpp
src/simulation/launch/: simulation_demo.launch  simulation_demo_yicun.launch
src/simulation/rviz/: visualization.rviz
src/simulation/test_scripts/: message_decoders.py  one_frame.txt  tcp_receiver.py
