<?xml version="1.0"?>
<package format="2">
  <name>controller</name>
  <version>0.0.6657</version>
  <description>The controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="qianke.ye@tum.de">Qianke Ye</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>simulation</build_depend>
  <build_depend>geometry_msgs</build_depend>     <!-- 新增 -->
  <build_depend>message_runtime</build_depend>

    
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>simulation</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>  <!-- 新增 -->


  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>simulation</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>       <!-- 新增 -->
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
